# eclesiar_app

./: .dockerignore  .env  .env.example  .gitignore  API_README.md  API_TROUBLESHOOTING.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  DOCKER_QUICK_START.md  Dockerfile  Dockerfile.optimized  GOOGLE_SHEETS_SETUP.md  LICENSE  PRODUCTION_ANALYSIS_UPDATE.md  QUICK_START.md  README.md  README_ARBITRAGE.md  REFACTORING_PLAN.md  SECURITY.md  SECURITY_UPDATE.md  SETUP_INSTRUCTIONS.md  SHORT_REPORT_UPDATE.md  api_client.py  arbitrage_analyzer_consolidated.py  arbitrage_report_20250918_115345.txt  config.py  db.py  docker-compose.yml  docker.env.template  eclesiar.db  economy.py  env.example  export_all_formats.py  export_markdown.py  export_plaintext.py  historia_raportow.json  main.py  military.py  orchestrator.py  (+19 more)
arbitrage_reports/: arbitrage_report_20250902_103545.txt  arbitrage_report_20250902_103637.txt  arbitrage_report_20250902_104257.txt
docs/: COMPLETION_REPORT.md  README.md  TROUBLESHOOTING.md
production_analysis/: production_analysis_20250902_125915.txt  production_analysis_20250903_084808.txt  production_analysis_20250903_085457.txt  production_analysis_20250908_121813.txt  production_analysis_20250908_121854.txt  production_analysis_20250908_122717.txt  production_analysis_20250908_123034.txt  production_analysis_20250908_123035.txt  production_analysis_20250908_123819.txt  production_analysis_final_20250902_130429.txt  production_analysis_final_20250902_140845.txt  production_analysis_final_20250902_141441.txt  production_analysis_final_20250902_141508.txt  production_analysis_final_20250902_141940.txt  production_analysis_final_20250902_151731.txt  production_analysis_final_20250902_151802.txt  production_analysis_final_20250902_151941.txt  production_analysis_final_20250902_152042.txt  production_analysis_final_20250902_152119.txt  production_analysis_final_20250902_152229.txt  production_analysis_final_20250902_152456.txt  production_analysis_final_20250902_152529.txt  production_analysis_final_20250902_152618.txt  (+5 more)
reports/: raport_dzienny.docx  (+163 more)
(+86 files in other folders)
